UI fixes. Added "Start Revere with System" menu item.

--- a/libs/r_utils/CMakeLists.txt
+++ b/libs/r_utils/CMakeLists.txt
@@ -56,6 +56,10 @@ target_link_libraries(
 if(WIN32)
     # Windows-specific libraries for r_secure_store (DPAPI and SHGetFolderPath)
     target_link_libraries(r_utils PUBLIC crypt32 shell32)
+elseif(APPLE)
+    # macOS-specific frameworks for r_startup (Login Items)
+    find_package(Threads REQUIRED)
+    target_link_libraries(r_utils PUBLIC dl Threads::Threads "-framework CoreFoundation" "-framework CoreServices")
 else()
     find_package(Threads REQUIRED)
     target_link_libraries(r_utils PUBLIC dl Threads::Threads)
