fixed autostart in snap on linux.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -32,6 +32,7 @@ apps:
   revere:
     command: bin/revere
     extensions: [gnome]
+    autostart: revere-autostart.desktop
     plugs:
       - home
       - network
